re-checkin of bugs
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22558

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
@@ -60,7 +60,7 @@
                         </vr-row>
                         <vr-row removeline>
                             <vr-columns colnum="12">
-                                <var-label>Reason:</var-label>
+                                <vr-label>Reason:</vr-label>
                                 <textarea class="form-control" ng-model="Reason" />
                             </vr-columns>
                         </vr-row>
