--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -41,12 +41,17 @@ textarea.form-control {
 padding: 5px 2px;
 
 }
-
+.dropdown-menu {
+   font-size:12px;
+}
+.form-control {
+   font-size:12px;
+}
 label{
     font-size:12px;
 }
-@media (min-width: 1205px)  { 
-    .form-control {
+@media (max-width: 1200px)  { 
+    /*.form-control {
        min-width:185px;
        max-width:185px
     }
@@ -66,6 +71,9 @@ label{
     .dropdown {
        min-width:185px;         
        max-width:185px;
+    }*/
+    .menu-right-con {
+        height:20px;
     }
 }
 
@@ -257,11 +265,6 @@ Use this for keyframe animations
     float:right !important ;
 }
 .btncustom:hover{ 
-    opacity:0.99;
-    background-color:black !important;
-
-}
-.highlight-btn{ 
     opacity:0.99;
     background-color:black !important;
 
