--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
@@ -23,7 +23,7 @@
                         <div ng-if="ctrl.isRemoteLoad()" ng-show="!ctrl.showloading && ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
                         <div ng-if="ctrl.isRemoteLoad()" ng-show="ctrl.showloading">Loading..</div>
 
-                        <div ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
+                        <div ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px; padding-left: 3px;" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
                             <div class="mark-select " ng-click="ctrl.selectValue($event, c); " ng-repeat="c in ctrl.getdatasource() | filter:ctrl.filtername"
                                  style="display: block; padding: 3px 2px 0px 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
                                 <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
