--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -3,19 +3,19 @@
     <vr-row>
 
         <form ng-hide="filterSectionCollapsed">
-            <vr-columns colnum="3">
+            <vr-columns colnum="2" simplecol>
                 <label>Type</label>
                 <vr-select ismultipleselection hideselectedvaluessection="true" datatextfield="name" datavaluefield="objectType"
                            datasource="optionsRouteTypeF.datasource" selectedvalues="optionsRouteTypeF.selectedvalues"></vr-select>
             </vr-columns>
-            <vr-columns colnum="3">
+            <vr-columns colnum="2" simplecol>
                 <vr-label>Customer</vr-label>
                 <vr-select ismultipleselection datasource="optionsCustomersF.datasource" selectedvalues="optionsCustomersF.selectedvalues" datatextfield="Name" datavaluefield="CarrierAccountID"
                            entityname="Customers">
 
                 </vr-select>
             </vr-columns>
-            <vr-columns colnum="3">
+            <vr-columns colnum="2" simplecol>
                 <div class="btn-group btn-group-custom" role="group" ng-init="option=1">
                     <label class="hand-cursor" ng-class="option == 1?'clicked-btn':''" ng-click="option = 1">By Zones</label>
                     <label>|</label>
@@ -26,7 +26,7 @@
                            entityname="Zones"></vr-select>
 
 
-                <number-filed ng-show="option == 2" input-value="code" />
+                <number-filed ng-show="option == 2" input-value="code" place-holder="'Type Code'" />
 
             </vr-columns>
 
@@ -57,7 +57,7 @@
                     <button class="btn btn-default btncustom action-bar-btn-icon" ng-show="showHis==false" ng-class="gridOptionsRouteRule.enableFiltering==true?'':'toggle-Icon'" type="button" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
                 </div>
                 <div transclude-to="buttons">
-                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon  " ng-if="gridOptionsHistory.data.length > 0 " ng-click="switchGrids()" aria-label="Left Align">
+                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon  highlight-btn" ng-if="gridOptionsHistory.data.length > 0 " ng-click="switchGrids()" aria-label="Left Align">
                         <span ng-show="showHis==false">
                             {{gridOptionsHistory.data.length}} Updated Rule(s)
                             <span style="padding-left:4px" class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
