--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -85,7 +85,7 @@
                             <span style=" ">Page Size: </span>
                         </vr-label>
                         <div style="float: left; ">
-                            <vr-select datasource="topCounts" selectedvalues="selectedTopCount" data-onselectionchanged="pageChanged" nocaret noborder></vr-select>
+                            <vr-select datasource="topCounts" selectedvalues="selectedTopCount" data-onselectionchanged="pageChanged" nocaret noborder openup></vr-select>
                         </div>
                        
                         
