--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -36,7 +36,7 @@
                 
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
-                    <vr-button type="Reset"></vr-button>
+                    <vr-button type="Reset" ng-show="false"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
