--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/RouteOverrideTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/RouteOverrideTemplate.html
@@ -7,7 +7,7 @@
     </vr-columns>
     <vr-columns colnum="3"  ng-class="optionsSuppliers.selectedvalues.length == 0 ? 'emptycol':''">
         <ul class="list-group" style="margin:0px" ng-show="optionsSuppliers.selectedvalues.length > 0">
-            <li class="list-group-item list-custom" style="margin:1px;border:0px">
+            <li class="list-group-item list-custom" style="margin: 1px; border: 0px; font-size: 12px">
                 <div style="display:inline-block;padding-left:25px">Supplier</div>
                 <div style="float: right;">
                     <span style="padding-right:50px">%</span>
@@ -15,7 +15,7 @@
             </li>
         </ul>
         <ul class="list-group dragbelzone" ng-sortable="itemsSortable" ng-show="optionsSuppliers.selectedvalues.length > 0">
-            <li ng-repeat="item in optionsSuppliers.selectedvalues" class="list-group-item list-custom" style="margin:1px">
+            <li ng-repeat="item in optionsSuppliers.selectedvalues" class="list-group-item list-custom" style="margin: 1px; font-size: 12px">
                 <i class="glyphicon glyphicon-th-list handeldrag"></i>
                 <div style="display:inline-block;max-width:200px;">{{item.Name}}</div>
                 <i class="glyphicon glyphicon-remove hand-cursor" style="float: right; padding: 5px; cursor:default" ng-click="selectSupplier($event,item)"></i>
