--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -93,7 +93,7 @@
         </vr-columns>
         <vr-columns colnum="12" nopadding nomargin>
 
-            <div ui-grid="gridOptionsHistory" ng-if="showHis">
+            <div ui-grid="gridOptionsHistory" class="vr-grid" ng-if="showHis">
             </div>
 
         </vr-columns>
