--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -924,3 +924,36 @@ input.ui-grid-filter-input[type="text"] {
     top: -7px;
     padding: 5px 2px;
 }
+.his-nav{
+    position:fixed;
+    z-index:1050;
+    right:1%;
+    top:6px;
+    border:1px solid #829EBF;
+}
+.his-nav .panel-body{
+   background-color:#f6F6f6;
+   padding:20px;
+   font-size:13px;
+   box-sizing:border-box;
+}
+/* custom grid*/
+.grid-vr-custom{
+    font-size:12px;
+}
+.grid-body{
+     background-color:#f0f0f0;
+}
+.grid-header{
+    background-color:#829EBF;
+}
+.grid-header.grid-cell{
+}
+.grid-cell{
+    display:inline-block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding:5px ;
+    max-width:100%;
+}
