--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Client/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Client/Views/Traffic Statistics/ZoneMonitor.html
@@ -49,7 +49,7 @@
                     <div class="panel-body">
                         <vr-row removeline>
                             <vr-columns colnum="4">
-                                <vr-datagrid datasource="overallData" hideheader="'true'">
+                                <vr-datagrid datasource="overallData" hideheader="'true'" noverticallines="true">
                                     <vr-datagridcolumn field="'measureDescription'" isclickable="isOverallItemClickable" onclicked="onOverallItemClicked"></vr-datagridcolumn>
                                     <vr-datagridcolumn field="'value'" type="'Number'"></vr-datagridcolumn>
                                 </vr-datagrid>
@@ -73,8 +73,8 @@
             </vr-columns>
         </vr-row>
         <vr-row>
-            <vr-columns colnum="12">
-                <vr-datagrid data-on-ready="onMainGridReady" datasource="data">
+            <vr-columns colnum="12" simplecol>
+                <vr-datagrid data-on-ready="onMainGridReady" datasource="data" >
                     <vr-datagridcolumn headertext="'Zone'" field="'zoneName'" enablehiding="'false'" isclickable="'true'" onclicked="onZoneClicked"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
                 </vr-datagrid>
