--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/ZoneDashboard.html
@@ -55,7 +55,7 @@
         </vr-columns>
     </vr-row>
     <vr-row>
-        <vr-columns colnum="12">            
+        <vr-columns colnum="12" simplecol>
             <vr-datagrid datasource="data" maxheight="700px">
                 <vr-datagridcolumn headertext="'Zone Name'" field="'EntityName'"></vr-datagridcolumn>
                 <vr-datagridcolumn ng-repeat="measureType in optionsMeasureTypes.datasource" headertext="measureType.name" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>
