--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -50,14 +50,9 @@
 
         </div>
         <div class="grid-vr-custom" id="gridtest">
-            <div class="grid-header" ng-sortable="itemsSortable">
+            <div class="grid-header" ng-sortable="itemsSortable" style="height: auto; white-space: nowrap; overflow: hidden;">
                 <div ng-repeat="c in columns" class="grid-cell handeldrag" ng-init="c.colwidth = getwidth() " ng-style="{'width':getwidth()+'px'}">
                     {{columns[$index].displayname}}
-                    <div class="resizer"
-                         resizer="vertical"
-                         resizer-width="1" ind="{{$index}}" draggable="true">
-                        e
-                    </div>
                 </div>
             </div>
             <div class="grid-body-container">
@@ -81,9 +76,9 @@
 
             </div>
         </div>
-        
-        
-        </div>
+
+
+</div>
 
 <!--<div id="gridtest" ui-grid="gridOptionsRouteRule" ui-grid-expandable ui-grid-auto-resize >-->
 <!--<div class="row">-->
