--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Client/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Client/Views/Traffic Statistics/ZoneMonitor.html
@@ -49,7 +49,7 @@
                     <div class="panel-body">
                         <vr-row removeline>
                             <vr-columns colnum="4">
-                                <vr-datagrid datasource="overallData" hideheader="'true'" noverticallines="true">
+                                <vr-datagrid datasource="overallData" hideheader="'true'" noverticallines="true" isloading="isGettingData">
                                     <vr-datagridcolumn field="'measureDescription'" isclickable="isOverallItemClickable" onclicked="onOverallItemClicked"></vr-datagridcolumn>
                                     <vr-datagridcolumn field="'value'" type="'Number'"></vr-datagridcolumn>
                                 </vr-datagrid>
@@ -74,7 +74,7 @@
         </vr-row>
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-datagrid data-on-ready="onMainGridReady" datasource="data" >
+                <vr-datagrid data-on-ready="onMainGridReady" datasource="data" isloading="isGettingData">
                     <vr-datagridcolumn headertext="'Zone'" field="'zoneName'" enablehiding="'false'" isclickable="'true'" onclicked="onZoneClicked"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
                 </vr-datagrid>
@@ -83,7 +83,7 @@
                 Page {{currentPage}} of {{numberOfPages}}
             </vr-label>-->
         </vr-row>
-        <div ng-class="{'disabledbutton': formState.gettingDataDisabled}">
+        <div>
             <vr-form name="formNavigation">
                 <vr-row>
                     <vr-columns colnum="2" simplecol>
@@ -93,8 +93,8 @@
                         <div style="float: left; ">
                             <vr-select datasource="topCounts" selectedvalues="selectedTopCount" data-onselectionchanged="pageChanged" nocaret noborder openup></vr-select>
                         </div>
-                       
-                        
+
+
                     </vr-columns>
                     <vr-columns colnum="8" simplecol>
                         <div style=" margin-top: 4px;text-align:center ">
@@ -102,12 +102,12 @@
                                         items-per-page="selectedTopCount" direction-links="true" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>
                         </div>
                     </vr-columns>
-                        <vr-columns colnum="2" simplecol>
-                            <vr-label style="float:right; margin-top: 4px">
-                                <span style="">Page {{currentPage}} of {{numberOfPages}}</span>
-                            </vr-label>
-                        </vr-columns>
-</vr-row>
+                    <vr-columns colnum="2" simplecol>
+                        <vr-label style="float:right; margin-top: 4px">
+                            <span style="">Page {{currentPage}} of {{numberOfPages}}</span>
+                        </vr-label>
+                    </vr-columns>
+                </vr-row>
             </vr-form>
         </div>
 
@@ -121,7 +121,8 @@
 
     .disabledbutton {
         pointer-events: none;
-        opacity: 0.1;
+        opacity: 0.6;
+        background-image: url("~/../images/loader-mask.gif");
     }
 
     .pagination > li > a, .pagination > li > span {
