--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Client/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Client/Views/Traffic Statistics/ZoneMonitor.html
@@ -1,7 +1,7 @@
 ﻿
 <vr-panel>
     <vr-form name="formFilter">
-        <div ng-hide="filterSectionCollapsed" ng-init="formState={gettingDataDisabled: false}">
+        <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-select label="Switches:" datasource="switches"
@@ -35,21 +35,19 @@
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
+                    <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true"></vr-button>
                     <vr-button type="Reset" ng-show="false"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
     </vr-form>
-    <div ng-show="showResult">
+    <div ng-show="showResult" vr-loader="isGettingData">
         <vr-row>
             <vr-columns colnum="7" simplecol>
-                <div class="panel-primary panel-vr">
-                    <div class="panel-heading">Overall</div>
-                    <div class="panel-body">
+                <vr-section title="Overall">
                         <vr-row removeline>
                             <vr-columns colnum="4">
-                                <vr-datagrid datasource="overallData" hideheader="'true'" noverticallines="true" isloading="isGettingData">
+                                <vr-datagrid datasource="overallData" hideheader="'true'" noverticallines="true">
                                     <vr-datagridcolumn field="'measureDescription'" isclickable="isOverallItemClickable" onclicked="onOverallItemClicked"></vr-datagridcolumn>
                                     <vr-datagridcolumn field="'value'" type="'Number'"></vr-datagridcolumn>
                                 </vr-datagrid>
@@ -58,23 +56,18 @@
                                 <vr-chart data-on-ready="chartSelectedMeasureReady"></vr-chart>
                             </vr-columns>
                         </vr-row>
-
-                    </div>
-
-                </div>
+                </vr-section>
             </vr-columns>
             <vr-columns colnum="5" simplecol>
-                <div class="panel-primary panel-vr">
-                    <div class="panel-heading">Zone Measures</div>
-                    <div class="panel-body">
+                <vr-section title="Zone Measures" vr-loader="isGettingEntityStatistics">
                         <vr-chart data-on-ready="chartSelectedEntityReady"></vr-chart>
-                    </div>
-                </div>
+                </vr-section>
             </vr-columns>
         </vr-row>
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-datagrid data-on-ready="onMainGridReady" datasource="data" isloading="isGettingData">
+                <vr-datagrid data-on-ready="onMainGridReady" datasource="data"
+                             pagersettings="mainGridPagerSettings">
                     <vr-datagridcolumn headertext="'Zone'" field="'zoneName'" enablehiding="'false'" isclickable="'true'" onclicked="onZoneClicked"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" type="'Number'" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
                 </vr-datagrid>
@@ -84,52 +77,13 @@
             </vr-label>-->
         </vr-row>
         <div>
-            <vr-form name="formNavigation">
-                <vr-row>
-                    <vr-columns colnum="2" simplecol>
-                        <vr-label style="float: left; margin-top: 4px">
-                            <span style=" ">Page Size: </span>
-                        </vr-label>
-                        <div style="float: left; ">
-                            <vr-select datasource="topCounts" selectedvalues="selectedTopCount" data-onselectionchanged="pageChanged" nocaret noborder openup></vr-select>
-                        </div>
 
-
-                    </vr-columns>
-                    <vr-columns colnum="8" simplecol>
-                        <div style=" margin-top: 4px;text-align:center ">
-                            <pagination total-items="totalDataCount" ng-model="currentPage" max-size="10" class="pagination-sm" num-pages="numberOfPages"
-                                        items-per-page="selectedTopCount" direction-links="true" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>
-                        </div>
-                    </vr-columns>
-                    <vr-columns colnum="2" simplecol>
-                        <vr-label style="float:right; margin-top: 4px">
-                            <span style="">Page {{currentPage}} of {{numberOfPages}}</span>
-                        </vr-label>
-                    </vr-columns>
-                </vr-row>
-            </vr-form>
         </div>
 
-       
+
     </div>
 </vr-panel>
 <style>
-    .pagination {
-        margin: 0px !important;
-    }
-
-    .disabledbutton {
-        pointer-events: none;
-        opacity: 0.6;
-        background-image: url("~/../images/loader-mask.gif");
-    }
-
-    .pagination > li > a, .pagination > li > span {
-        background-color: transparent;
-        border: none;
-        /*color: #FFF;*/
-    }
 </style>
 
 
