--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/SeniorManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/SeniorManagementDashboard.html
@@ -30,33 +30,23 @@
             </div>
         </vr-actionbar>
     </vr-row>
-    <vr-row>
-        <vr-columns colnum="6" simplecol>
-            <div class="panel-primary panel-vr">
-                <div class="panel-heading">Top Destinations</div>
-                <div class="panel-body">
-                     <vr-chart data-on-ready="chartTopDestinationsReady"></vr-chart>
-                </div>
-            </div>
-            
-        </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns colnum="6" simplecol>
-            <div class="panel-primary panel-vr">
-                <div class="panel-heading">Top Customers</div>
-                <div class="panel-body">
+    <div vr-loader="isGettingData">
+        <vr-row>
+            <vr-columns colnum="6" simplecol>
+                <vr-section  title="Top Customers">
                     <vr-chart data-on-ready="chartTopCustomersReady"></vr-chart>
-                </div>
-            </div>            
-        </vr-columns>
-        <vr-columns colnum="6" simplecol>
-            <div class="panel-primary panel-vr">
-                <div class="panel-heading">Top Suppliers</div>
-                <div class="panel-body">
-                    <vr-chart data-on-ready="chartTopSuppliersReady"></vr-chart>
-                </div>
-            </div>            
-        </vr-columns>
-    </vr-row>
+                </vr-section>
+            </vr-columns>
+            <vr-columns colnum="6" simplecol>
+                <vr-section title="Top Suppliers">
+                        <vr-chart data-on-ready="chartTopSuppliersReady"></vr-chart>
+                </vr-section>
+            </vr-columns>
+            <vr-columns colnum="6" simplecol>
+                <vr-section title="Top Destinations">
+                    <vr-chart data-on-ready="chartTopDestinationsReady" menuactions="chartTopDestinationMenuActions"></vr-chart>
+                </vr-section>
+            </vr-columns>
+        </vr-row>
+    </div>
 </vr-panel>
