--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/ZoneDashboard.html
@@ -36,30 +36,26 @@
             </div>
         </vr-actionbar>
     </vr-row>
-    <vr-row>
-        <vr-columns colnum="6" simplecol>
-            <div class="panel-primary panel-vr">
-                <div class="panel-heading">Top Destinations</div>
-                <div class="panel-body">
-                    <vr-chart data-on-ready="chartTopDestinationsReady"></vr-chart>
-                </div>
-            </div>
-        </vr-columns>
-        <vr-columns colnum="6" simplecol>
-            <div class="panel-primary panel-vr">
-                <div class="panel-heading">Destination Measures</div>
-                <div class="panel-body">
-                    <vr-chart data-on-ready="chartZoneReady"></vr-chart>
-                </div>
-            </div>
-        </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns colnum="12" simplecol>
-            <vr-datagrid datasource="data" maxheight="700px">
-                <vr-datagridcolumn headertext="'Zone Name'" field="'EntityName'"></vr-datagridcolumn>
-                <vr-datagridcolumn ng-repeat="measureType in optionsMeasureTypes.datasource" headertext="measureType.name" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>
-            </vr-datagrid>
-        </vr-columns>
-    </vr-row>
+    <div vr-loader="isGettingData">
+        <vr-row>
+            <vr-columns colnum="6" simplecol>
+                <vr-section title="Top Destinations">
+                        <vr-chart data-on-ready="chartTopDestinationsReady"></vr-chart>
+                </vr-section>
+            </vr-columns>
+            <vr-columns colnum="6" simplecol>
+                <vr-section title="Destination Measures" vr-loader="isGettingZoneData">
+                        <vr-chart data-on-ready="chartZoneReady"></vr-chart>
+                </vr-section>
+            </vr-columns>
+        </vr-row>
+        <vr-row>
+            <vr-columns colnum="12" simplecol>
+                <vr-datagrid datasource="data" maxheight="700px" menuactions="zoneMenuActions">
+                    <vr-datagridcolumn headertext="'Zone Name'" field="'EntityName'"></vr-datagridcolumn>
+                    <vr-datagridcolumn ng-repeat="measureType in optionsMeasureTypes.datasource" headertext="measureType.name" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>
+                </vr-datagrid>
+            </vr-columns>
+        </vr-row>
+    </div>    
 </vr-panel>
