--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/ZoneSummary.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/ZoneSummary.html
@@ -9,14 +9,14 @@
             <div class="modal-body">
 
 
-                <div ng-controller="ZoneSummaryController">
+                <div ng-controller="ZoneSummaryController" vr-loader="isGettingData">
                     <h3>Zone Name: {{zoneName}}</h3>
                     <select ng-options="itm as itm.name for itm in timeDimensionTypes"
                             ng-model="selectedTimeDimensionType" ng-change="updateReport()"></select>
                     <!--<div id="custom" class="gridroute" ui-grid="gridOptionsZoneDetails" style="height:400px"></div>-->
                     <vr-datagrid datasource="data" maxheight="600px">
                         <vr-datagridcolumn headertext="'Time'" field="'dateTimeValue'"></vr-datagridcolumn>
-                        <vr-datagridcolumn ng-repeat="measureType in measureTypes" headertext="measureType.description" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>                        
+                        <vr-datagridcolumn ng-repeat="measureType in measureTypes" headertext="measureType.description" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>
                     </vr-datagrid>
                     <a ng-click="gotoDetails()" style="cursor: pointer; ">More Details</a>
                 </div>
